--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
             <a href="./one">
               <img class="so-title-image" src="./images/headphones.png">
             </a>
-            <a href="./two">
+            <!-- <a href="./">
               <img class="so-title-image" src="./images/web.png">
             </a>
-            <a href="./three">
+            <a href="./">
               <img class="so-title-image--small" src="./images/stop-sign.png">
             </a>
+            <a href="./">
+              <img class="so-title-image" src="./images/horse.png">
+            </a> -->
           </div>
+          <!-- <div class="so-image-container">
+            <img class="so-landing-image" src="./images/stereo.jpg">
+          </div> -->
         </div>
       </div>
     </body>
