--- a/one/index.html
+++ b/one/index.html
@@ -14,13 +14,7 @@
     <body>
       <div class="so-page">
         <div class="so-audio-container">
-          <!-- <div class="so-title-container">
-          manifest-luigi-russolo.mp4 fantasia-backwards.mp4 evian.mp4 walking-down-k-rd-with-piano.mp4 russian-choir.mp4
-          </div> -->
           <div class="so-audio-container-inner">
-            <audio controls>
-              <source src="../audio/manifesto.mp3" type="audio/mpeg">
-            </audio>
             <audio controls>
               <source src="../audio/fantasia-backwards.mp3" type="audio/mpeg">
             </audio>
@@ -28,13 +22,13 @@
               <source src="../audio/evian.mp3" type="audio/mpeg">
             </audio>
             <audio controls>
-              <source src="../audio/piano.mp3" type="audio/mpeg">
+              <source src="../audio/tornado.mp3" type="audio/mpeg">
             </audio>
-          </div>
-          <div class="so-audio-container-inner so-audio-container-inner--second">
             <audio controls>
               <source src="../audio/choir.mp3" type="audio/mpeg">
             </audio>
+          </div>
+          <div class="so-audio-container-inner so-audio-container-inner--second">
           </div>
         </div>
         <div class="so-video-container">
@@ -43,6 +37,12 @@
           </video>
           <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
             <source src="../images/birds.mp4" type="video/mp4">
+          </video>
+          <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+            <source src="../images/mcqueen.mp4" type="video/mp4">
+          </video>
+          <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+            <source src="../images/jehovah.mp4" type="video/mp4">
           </video>
         </div>
       </div>
