--- a/index.html
+++ b/index.html
@@ -13,24 +13,22 @@
  </head>
     <body>
       <div class="so-page">
+        <img class="so-huge" src="./images/s-2.png">
         <div class="so-page-inner">
           <div class="so-image-links-container">
             <a href="./one">
               <img class="so-title-image" src="./images/headphones.png">
             </a>
-            <!-- <a href="./">
+            <a href="./one">
               <img class="so-title-image" src="./images/web.png">
             </a>
-            <a href="./">
+            <a href="./one">
               <img class="so-title-image--small" src="./images/stop-sign.png">
             </a>
-            <a href="./">
-              <img class="so-title-image" src="./images/horse.png">
-            </a> -->
+            <a href="./one">
+              <img class="so-title-image" src="./images/walking.png">
+            </a>
           </div>
-          <!-- <div class="so-image-container">
-            <img class="so-landing-image" src="./images/stereo.jpg">
-          </div> -->
         </div>
       </div>
     </body>
