--- a/one/index.html
+++ b/one/index.html
@@ -15,6 +15,14 @@
       <div class="so-page">
         <div class="so-audio-container">
           <div class="so-audio-container-inner">
+            <!-- <div class="evian-track">
+              <audio id="track">
+                <source src="../audio/evian.mp3" type="audio/mpeg">
+              </audio>
+              <div id="player-container">
+                <div id="play-pause" class="play"></div>
+              </div>
+            </div> -->
             <audio controls>
               <source src="../audio/choir.mp3" type="audio/mpeg">
             </audio>
@@ -24,8 +32,11 @@
             <audio controls>
               <source src="../audio/evian.mp3" type="audio/mpeg">
             </audio>
-          </div>
-          <div class="so-audio-container-inner so-audio-container-inner--second">
+            <!-- <div class="so-back-button">
+              <a href="../">
+                <img class="so-back-image" src="../images/s-2.png">
+              </a>
+            </div> -->
           </div>
         </div>
         <div class="so-video-container">
