--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <a href="./one">
               <img class="so-title-image" src="./images/headphones.png">
             </a>
-            <a href="./one">
+            <a href="./two">
               <img class="so-title-image" src="./images/web.png">
             </a>
-            <a href="./one">
+            <!-- <a href="./one">
               <img class="so-title-image--small" src="./images/stop-sign.png">
             </a>
             <a href="./one">
               <img class="so-title-image" src="./images/walking.png">
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
