--- a/index.html
+++ b/index.html
@@ -13,21 +13,38 @@
  </head>
     <body>
       <div class="so-page">
-        <img class="so-huge" src="./images/s-2.png">
         <div class="so-page-inner">
-          <div class="so-image-links-container">
-            <a href="./one">
-              <img class="so-title-image" src="./images/headphones.png">
-            </a>
-            <a href="./two">
-              <img class="so-title-image" src="./images/web.png">
-            </a>
-            <!-- <a href="./one">
-              <img class="so-title-image--small" src="./images/stop-sign.png">
-            </a>
-            <a href="./one">
-              <img class="so-title-image" src="./images/walking.png">
-            </a> -->
+          <div class="so-column-section">
+            <div class="so-first-column">
+              <a href="./one">
+                <video class="so-video-width so-spacing--small" autoplay muted loop playsinline id="vid" preload="auto">
+                  <source src="./images/paper-bag.mp4" type="video/mp4">
+                </video>
+              </a>
+              <img class="so-image-full so-spacing--large" src="./images/choir.jpg">
+            </div>
+            <div class="so-second-column">
+              <a href="./one">
+                <video class="so-video-width so-spacing--xlarge" autoplay muted loop playsinline id="vid" preload="auto">
+                  <source src="./images/birds.mp4" type="video/mp4">
+                </video>
+              </a>
+            </div>
+            <div class="so-third-column">
+              <a href="./one">
+                <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+                  <source src="./images/mcqueen.mp4" type="video/mp4">
+                </video>
+              </a>
+            </div>
+            <div class="so-fourth-column so-spacing--medium">
+              <a href="./one">
+                <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+                  <source src="./images/jehovah.mp4" type="video/mp4">
+                </video>
+              </a>
+              <img class="so-image-full so-spacing--xsmall" src="./images/gogo.jpg">
+            </div>
           </div>
         </div>
       </div>
