--- a/one/index.html
+++ b/one/index.html
@@ -13,16 +13,8 @@
  </head>
     <body>
       <div class="so-page">
-        <div class="so-audio-container">
-          <div class="so-audio-container-inner">
-            <!-- <div class="evian-track">
-              <audio id="track">
-                <source src="../audio/evian.mp3" type="audio/mpeg">
-              </audio>
-              <div id="player-container">
-                <div id="play-pause" class="play"></div>
-              </div>
-            </div> -->
+        <div class="so-page-inner">
+          <div class="so-column-section">
             <audio controls>
               <source src="../audio/choir.mp3" type="audio/mpeg">
             </audio>
@@ -32,26 +24,21 @@
             <audio controls>
               <source src="../audio/evian.mp3" type="audio/mpeg">
             </audio>
-            <!-- <div class="so-back-button">
-              <a href="../">
-                <img class="so-back-image" src="../images/s-2.png">
-              </a>
-            </div> -->
           </div>
-        </div>
-        <div class="so-video-container">
-          <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-            <source src="../images/paper-bag.mp4" type="video/mp4">
-          </video>
-          <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-            <source src="../images/birds.mp4" type="video/mp4">
-          </video>
-          <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-            <source src="../images/mcqueen.mp4" type="video/mp4">
-          </video>
-          <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-            <source src="../images/jehovah.mp4" type="video/mp4">
-          </video>
+          <div class="so-video-container">
+            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+              <source src="../images/paper-bag.mp4" type="video/mp4">
+            </video>
+            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+              <source src="../images/birds.mp4" type="video/mp4">
+            </video>
+            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+              <source src="../images/mcqueen.mp4" type="video/mp4">
+            </video>
+            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+              <source src="../images/jehovah.mp4" type="video/mp4">
+            </video>
+          </div>
         </div>
       </div>
     </body>
