--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Cache-Control" content="no-store">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewpoint" content="width=device-width.initial-scale=1.0">
-    <title>Sound</title>
+    <title>Adriano</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link rel="stylesheet" href="site.css">
@@ -14,7 +14,18 @@
     <body>
       <div class="so-page">
         <div class="so-page-inner">
-          <div class="so-column-section">
+          <div class="so-links-title-container">
+            <p>Experiments</p>
+          </div>
+          <div class="so-links-container">
+            <a href="./one">One</a>
+            <br>
+            <a href="./two">Two</a>
+            <br>
+            <a href="./three">Three</a>
+            <br>
+          </div>
+          <!-- <div class="so-column-section">
             <div class="so-first-column">
               <a href="./one">
                 <video class="so-video-width so-spacing--small" autoplay muted loop playsinline id="vid" preload="auto">
@@ -29,6 +40,9 @@
                   <source src="./images/birds.mp4" type="video/mp4">
                 </video>
               </a>
+              <video class="so-video-width so-spacing--xlarge" autoplay muted loop playsinline id="vid" preload="auto">
+                <source src="./images/circle-gradient-3.mp4" type="video/mp4">
+              </video>
             </div>
             <div class="so-third-column">
               <a href="./one">
@@ -45,7 +59,7 @@
               </a>
               <img class="so-image-full so-spacing--xsmall" src="./images/gogo.jpg">
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </body>
