--- a/two/index.html
+++ b/two/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Cache-Control" content="no-store">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewpoint" content="width=device-width.initial-scale=1.0">
-    <title>Sound</title>
+    <title>Adriano</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <link rel="stylesheet" href="site.css">
@@ -20,11 +20,16 @@
             </audio>
           </div>
         </div>
+        <div class="so-video-container">
+          <!-- <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
+            <source src="../images/text-roll.mp4" type="video/mp4">
+          </video> -->
+        </div>
         <div class="so-image-container">
           <img class="so-image so-image--left" src="../images/gogo.jpg">
           <img class="so-image so-image--right" src="../images/choir.jpg">
         </div>
-        <div class="so-text-container">
+        <!-- <div class="so-text-container">
             <u>Ordering at Gogo Music Cafe</u>
             <p>
               H: Should we get two?
@@ -143,7 +148,7 @@
             <p>
               E: Yep.. Awesome
             </p>
-        </div>
+        </div> -->
       </div>
     </body>
 </html>
