--- a/index.html
+++ b/index.html
@@ -9,42 +9,15 @@
     <meta name="keywords" content="">
     <link rel="stylesheet" href="site.css">
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
-    <script src="./custom.js" defer="defer"></script>
+    <script src="../custom.js" defer="defer"></script>
     </head>
     <body>
-      <audio id="audio"></audio>
       <div class="so-scan-container">
         <div class="so-scan-container-inner">
-          <div class="so-play-stop-container">
-            <div class="so-play-stop-button">
-              <button onclick="play('./audio/laundromat-1.mp3')">PLAY</button>
-            </div>
-            <div class="so-play-stop-button">
-              <button onclick="stopAudio()">STOP</button>
-            </div>
-          </div>
-          <div class="so-video-margin">
-            <video class="so-video-width so-video-width--one" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="./images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="./images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width so-video-width--three" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="./images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width so-video-width--fourth" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="./images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="./images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width so-video-width--five" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="./images/washing-machine.mp4" type="video/mp4">
-            </video>
-            <video class="so-video-width" autoplay muted loop playsinline id="vid" preload="auto">
-              <source src="./images/washing-machine.mp4" type="video/mp4">
-            </video>
+          <div class="so-sign-image-container">
+            <a href="./laundromat">
+              <img src="./images/sound-sign.png">
+            </a>
           </div>
         </div>
       </div>
