--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="so-scan-container">
         <div class="so-scan-container-inner">
           <div class="so-sign-image-container">
-            <a href="./laundromat">
+            <a href="./laundromat" target="blank">
               <img src="./images/sound-sign.png">
             </a>
           </div>
