--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <div class="so-scan-container-inner">
           <div class="so-sign-image-container">
             <a href="./laundromat" target="blank">
+              <img src="./images/laundromat-sign.png">
+            </a>
+          </div>
+          <div class="so-sign-image-container">
+            <a href="./laundromat" target="blank">
               <img src="./images/sound-sign.png">
             </a>
           </div>
