--- a/laundromat/index.html
+++ b/laundromat/index.html
@@ -17,7 +17,7 @@
         <div class="so-scan-container-inner">
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button onclick="play('../audio/laundromat-1.mp3')">PLAY</button>
+              <button onclick="play('../audio/laundromat.mp3')">PLAY</button>
             </div>
             <div class="so-play-stop-button">
               <button onclick="stopAudio()">STOP</button>
