--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
     <script src="../custom.js" defer="defer"></script>
     </head>
     <body>
-      <div class="so-scan-container">
-        <div class="so-scan-container-inner">
-          <div class="so-sign-image-container">
-            <a href="./laundromat" target="blank">
-              <img src="./images/laundromat-sign.png">
-            </a>
-          </div>
-          <div class="so-sign-image-container">
-            <a href="./laundromat" target="blank">
-              <img src="./images/sound-sign.png">
-            </a>
+      <div class="so-page">
+        <div class="so-scan-container">
+          <div class="so-scan-container-inner">
+            <div class="so-text-container">
+              <li><span class="blue">Adriano Orlando</span></li>
+              <li>The Art of Noises Futurist Manifest</li>
+              <li>Sirens Taken for Wonders</li>
+              <li>24 Hour Laundry</li>
+              <br>
+              <li>Sssnnnwhuffffl?/Hnwhuffl hhnnwfl hnfl hfl?/ Gdroblbo blhobngbl gbl gl g g g g glbg.l/ Drublhaflablhaflubhafgabhaaflhafl fl fl -/ gm grawwwww grf grawf awfgm graw gm./ Hovoplodok - doplodovok - plovodokotdoplodokosh?/ Splgraw fok fok splgrafhatchgabrlgabrl fok splfok!/ Zgra kra gka fok! /Grof grawff gahf? Gombl mbl bl -/ blm plm,/ blm plm,/ blm plm,/ blp.</li>
+              <li>All recorded voices are inscribed and re-rembodied in technology, technically a kind of typography</li>
+              <br>
+              <li><a href="./machines" target="_blank">Machines<a/></li>
+              <li><a href="./laundromat" target="_blank">Laundromat<a/></li>
+            </div>
           </div>
         </div>
       </div>
