--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
               <li>The Art of Noises Futurist Manifest</li>
               <li>Sirens Taken for Wonders</li>
               <li>24 Hour Laundry</li>
-              <br>
+            </div>
+            <div class="so-text-container">
               <li>Sssnnnwhuffffl?/Hnwhuffl hhnnwfl hnfl hfl?/ Gdroblbo blhobngbl gbl gl g g g g glbg.l/ Drublhaflablhaflubhafgabhaaflhafl fl fl -/ gm grawwwww grf grawf awfgm graw gm./ Hovoplodok - doplodovok - plovodokotdoplodokosh?/ Splgraw fok fok splgrafhatchgabrlgabrl fok splfok!/ Zgra kra gka fok! /Grof grawff gahf? Gombl mbl bl -/ blm plm,/ blm plm,/ blm plm,/ blp.</li>
               <li>All recorded voices are inscribed and re-rembodied in technology, technically a kind of typography</li>
-              <br>
+            </div>
+            <div class="so-text-container">
               <li><a href="./machines" target="_blank">Machines<a/></li>
               <li><a href="./laundromat" target="_blank">Laundromat<a/></li>
+            </div>
+            <div class="so-image-container">
+              <img src="./images/laundromat-sign.png">
             </div>
           </div>
         </div>
