--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
         <div class="so-scan-container">
           <div class="so-scan-container-inner">
             <div class="so-text-container">
-              <li><span class="blue">Adriano Orlando</span></li>
-              <li>The Art of Noises Futurist Manifest</li>
+              <li><span class="title">24 Hour Laundry</span></li>
+              <li>The Art of Noises Futurist Manifesto</li>
               <li>Sirens Taken for Wonders</li>
-              <li>24 Hour Laundry</li>
             </div>
             <div class="so-text-container">
               <li>Sssnnnwhuffffl?/Hnwhuffl hhnnwfl hnfl hfl?/ Gdroblbo blhobngbl gbl gl g g g g glbg.l/ Drublhaflablhaflubhafgabhaaflhafl fl fl -/ gm grawwwww grf grawf awfgm graw gm./ Hovoplodok - doplodovok - plovodokotdoplodokosh?/ Splgraw fok fok splgrafhatchgabrlgabrl fok splfok!/ Zgra kra gka fok! /Grof grawff gahf? Gombl mbl bl -/ blm plm,/ blm plm,/ blm plm,/ blp.</li>
