--- a/machines/index.html
+++ b/machines/index.html
@@ -18,139 +18,139 @@
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="pink-1" onclick="play('../audio/laundromat.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/laundromat.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="green-1" onclick="play('../audio/boring-machine.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/boring-machine.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="blue-1" onclick="play('../audio/cat.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/cat.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="orange-1" onclick="play('../audio/garbage-truck.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/garbage-truck.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="green-2" onclick="play('../audio/wind-turbine.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/wind-turbine.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="grey-1" onclick="play('../audio/mixer.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/mixer.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="blue-2" onclick="play('../audio/computer-starting.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/computer-starting.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="purple-1" onclick="play('../audio/f1.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/f1.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="brown-1" onclick="play('../audio/waste-disposer.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/waste-disposer.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="green-3" onclick="play('../audio/kettle.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/kettle.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="orange-2" onclick="play('../audio/dentist.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/dentist.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="blue-2" onclick="play('../audio/photocopier.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/photocopier.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="grey-1" onclick="play('../audio/offset-printer.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/offset-printer.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="green-2" onclick="play('../audio/oil-rig.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/oil-rig.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="pink-1" onclick="play('../audio/tank.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/tank.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="brown-1" onclick="play('../audio/sea-plane.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/sea-plane.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="orange-2" onclick="play('../audio/motorcycle.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/motorcycle.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="blue-1" onclick="play('../audio/street-cleaner.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/street-cleaner.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="grey-2" onclick="play('../audio/leaf-blower.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/leaf-blower.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="grey-1" onclick="play('../audio/lawnmower.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/lawnmower.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="green-1" onclick="play('../audio/jet-ski.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/jet-ski.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="orange-1" onclick="play('../audio/elevator.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/elevator.mp3')">&nbsp;</button>
             </div>
           </div>
 
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button class="brown-1" onclick="play('../audio/rocket.mp3')">&nbsp;</button>
+              <button onclick="play('../audio/rocket.mp3')">&nbsp;</button>
             </div>
           </div>
 
