--- a/laundromat/index.html
+++ b/laundromat/index.html
@@ -17,10 +17,10 @@
         <div class="so-scan-container-inner">
           <div class="so-play-stop-container">
             <div class="so-play-stop-button">
-              <button onclick="play('../audio/laundromat.mp3')">PLAY</button>
+              <button onclick="play('../audio/laundromat.mp3')">&nbsp;</button>
             </div>
-            <div class="so-play-stop-button">
-              <button onclick="stopAudio()">STOP</button>
+            <div class="so-play-stop-button ">
+              <button class="red" onclick="stopAudio()">&nbsp;</button>
             </div>
           </div>
           <div class="so-video-margin">
