--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="so-text-container">
               <li><a href="./machines" target="_blank">Machines<a/></li>
               <li><a href="./laundromat" target="_blank">Laundromat<a/></li>
+              <li><a href="./dissonance" target="_blank">Dissonance<a/></li>
             </div>
             <div class="so-image-container">
               <img src="./images/laundromat-sign.png">
