--- a/index.html
+++ b/index.html
@@ -9,28 +9,50 @@
     <meta name="keywords" content="">
     <link rel="stylesheet" href="site.css">
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
-    <script src="../custom.js" defer="defer"></script>
+    <script src="./custom.js" defer="defer"></script>
     </head>
     <body>
-      <div class="so-page">
-        <div class="so-scan-container">
-          <div class="so-scan-container-inner">
-            <div class="so-text-container">
-              <li><span class="title">24 Hour Laundry</span></li>
-              <li>The Art of Noises Futurist Manifesto</li>
-              <li>Sirens Taken for Wonders</li>
+      <div class="tw-page">
+        <div class="tw-header-container">
+          <div class="tw-header-container-inner">
+            <a href="./"><span class="tw-pink-hover">24 HOUR LAUNDRY</span></a>
+          </div>
+        </div>
+        <div class="tw-boxes-container">
+          <div class="tw-boxes-container--first">
+            <div class="tw-link-container">
+              The Art of Noises Manifesto by Luigi Russolo
+              <div class="tw-small-image">
+                <img src="./images/luigi.jpg">
+              </div>
             </div>
-            <div class="so-text-container">
-              <li>Sssnnnwhuffffl?/Hnwhuffl hhnnwfl hnfl hfl?/ Gdroblbo blhobngbl gbl gl g g g g glbg.l/ Drublhaflablhaflubhafgabhaaflhafl fl fl -/ gm grawwwww grf grawf awfgm graw gm./ Hovoplodok - doplodovok - plovodokotdoplodokosh?/ Splgraw fok fok splgrafhatchgabrlgabrl fok splfok!/ Zgra kra gka fok! /Grof grawff gahf? Gombl mbl bl -/ blm plm,/ blm plm,/ blm plm,/ blp.</li>
-              <li>All recorded voices are inscribed and re-rembodied in technology, technically a kind of typography</li>
+            <div class="tw-link-container">
+              audio visual dissonance
+              <div class="tw-small-image">
+                <img src="./images/jehovah.png">
+              </div>
             </div>
-            <div class="so-text-container">
-              <li><a href="./machines" target="_blank">Machines<a/></li>
-              <li><a href="./laundromat" target="_blank">Laundromat<a/></li>
-              <li><a href="./dissonance" target="_blank">Dissonance<a/></li>
+          </div>
+          <div class="tw-boxes-container--second">
+            <div class="tw-link-container">
+              15 machines
+              <div class="tw-small-image">
+                <img src="./images/dentist.png">
+              </div>
             </div>
-            <div class="so-image-container">
-              <img src="./images/laundromat-sign.png">
+            <div class="tw-link-container">
+              Sirens Taken for Wonders by Paul Elliman
+              <div class="tw-small-image">
+                <img src="./images/firetruck.png">
+              </div>
+            </div>
+          </div>
+          <div class="tw-boxes-container--third">
+            <div class="tw-link-container">
+              24 hour laundry, great north rd
+              <div class="tw-small-image">
+                <img src="./images/washing-machine.png">
+              </div>
             </div>
           </div>
         </div>
