--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         </div>
         <div class="tw-boxes-container">
           <div class="tw-boxes-container--first">
-            <div class="tw-link-container">
-              The Art of Noises Manifesto by Luigi Russolo
-              <div class="tw-small-image">
-                <img src="./images/luigi.jpg">
+            <a href="./theartofnoises">
+              <div class="tw-link-container">
+                The Art of Noises Manifesto by Luigi Russolo
+                <div class="tw-small-image">
+                  <img src="./images/luigi.jpg">
+                </div>
               </div>
-            </div>
+            </a>
             <div class="tw-link-container">
               audio visual dissonance
               <div class="tw-small-image">
