--- a/theartofnoises/index.html
+++ b/theartofnoises/index.html
@@ -43,7 +43,7 @@
             <source src="../images/luigi.mp4" type="video/mp4">
           </video>
           <div class="tw-image-annotation">
-            Luigi Russolo, <span class="tw-text-italic">Intonarumoris</span>, 1913. <a class="tw-underline" href="https://www.youtube.com/watch?v=BYPXAo1cOA4&t=82s&ab_channel=davidrato" target="_blank">Link</a>.
+            Luigi Russolo, Intonarumoris, 1913. <a class="tw-underline" href="https://www.youtube.com/watch?v=BYPXAo1cOA4&t=82s&ab_channel=davidrato" target="_blank">Link</a>.
           </div>
           <div class="tw-text-container">
             The Middle Ages, with the development and modification of the Greek tetrachordal system, with the Gregorian chant and popular songs, enriched the art of music, but continued to consider sound in its development in time, a restricted notion, but one which lasted many centuries, and which still can be found in the Flemish contrapuntalists’ most complicated polyphonies.
